Fixed overflow issue present in galleryWidget componet

--- a/assignment-lunacal/src/styles/galleryWidget.css
+++ b/assignment-lunacal/src/styles/galleryWidget.css
@@ -79,7 +79,9 @@
 }
 .gallery-images-container{
     height: 60%;
-    width: 86%;
+    width: 90%;
+    padding-left: 2.5%;
+    padding-right: 2.5%;
     display: flex;
     gap: 30px;
     overflow-x: scroll;
